1. 测评二级页本地搜索去掉 2. 专题弹窗、我的智评（包括全部及专题）中已结束的测评也需要能进入二级页 3. 我的->设置 中的‘账号绑定设置’文字改为‘密码及账号绑定设置 4. 安卓端文章详情页没有显示收藏数 5. 文章列表上增加一个评论数量的显示，字段comment_count，大于0才显示